--- a/scss/home.scss
+++ b/scss/home.scss
@@ -89,6 +89,7 @@
 
 .video {
     margin: 5rem auto !important;
+    overflow:hidden ;
     h1 {
         position: relative;
     }
@@ -129,6 +130,9 @@
             position: relative;
             z-index: 1;
             border-radius: 10px;
+            @media (max-width: 992px) {
+               margin-bottom: 1rem;
+            }
         }
     }
     .room-images::after{
@@ -136,15 +140,25 @@
         width: 100%;
         height: 100%;
         content: "";
-        border: 15px solid #439b4b;
+        background-color:#439b4b;
         left: -3%;
         top: 3%;
         z-index: -1;
         border-radius: 10px;
+        @media (max-width: 992px) {
+            display: none
+        }
     }
     button{
         width: 14rem;
         height: 3rem;
+        text-align: center;
+        @media (max-width: 992px) {
+            margin: auto;
+        }
+    }
+    @media (max-width: 992px) {
+        text-align: center;
     }
 }
 
