--- a/scss/home.scss
+++ b/scss/home.scss
@@ -59,7 +59,7 @@
             }
         }
 
-        button {
+        a {
             animation: shadow 3s infinite;
             width: 14rem;
             font-size: 20px;
