feat: triveni resort

--- a/css/home.css
+++ b/css/home.css
@@ -62,7 +62,7 @@
 .nav-hero .hero a {
   -webkit-animation: shadow 3s infinite;
           animation: shadow 3s infinite;
-  width: 14rem;
+  width: 14rem !important;
   font-size: 20px;
   color: #fff;
 }
