--- a/scss/home.scss
+++ b/scss/home.scss
@@ -61,7 +61,7 @@
 
         a {
             animation: shadow 3s infinite;
-            width: 14rem;
+            width: 14rem !important;
             font-size: 20px;
             color: #fff;
         }
