feat: triveni resort

--- a/css/home.css
+++ b/css/home.css
@@ -62,9 +62,11 @@
 .nav-hero .hero a {
   -webkit-animation: shadow 3s infinite;
           animation: shadow 3s infinite;
-  width: 14rem !important;
   font-size: 20px;
   color: #fff;
+}
+.nav-hero .hero .fs-20 {
+  font-size: 20px;
 }
 @-webkit-keyframes shadow {
   0%, 100% {
