--- a/scss/home.scss
+++ b/scss/home.scss
@@ -61,9 +61,13 @@
 
         a {
             animation: shadow 3s infinite;
-            width: 14rem !important;
+            // width: 14rem !important;
             font-size: 20px;
             color: #fff;
+        }
+
+        .fs-20{
+            font-size: 20px
         }
 
         @keyframes shadow {
