--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,3 +1,6 @@
+section{
+    overflow-x: hidden;
+}
 .container {
     .header {
         color: #0b4c8c;
@@ -201,64 +204,65 @@
   }
   
 
-// .team {
-//     .eclipse {
-//         z-index: -1;
-//         right: 0;
-//     }
 
-//     .dotted {
-//         z-index: -1;
-//         left: 2rem;
-//         bottom: 20%;
-//         opacity: 0.7;
-//         animation-name: rotate;
-//         animation-duration: 10s;
-//         animation-iteration-count: infinite;
-//     }
+  .team {
+    .eclipse {
+        z-index: -1;
+        right: 0;
+    }
 
-//     @keyframes rotate {
-//         from {
-//             transform: rotate(0deg);
-//         }
+    .dotted {
+        z-index: -1;
+        left: 2rem;
+        bottom: 20%;
+        opacity: 0.7;
+        animation-name: rotate;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+    }
 
-//         to {
-//             transform: rotate(180deg);
-//         }
-//     }
+    @keyframes rotate {
+        from {
+            transform: rotate(0deg);
+        }
 
-//     .member {
-//         .img-div {
-//             width: 100%;
-//             height: 23rem;
-//             overflow: hidden;
+        to {
+            transform: rotate(180deg);
+        }
+    }
 
-//             img {
-//                 height: 100%;
-//                 width: 100%;
-//                 object-fit: cover;
-//                 transition: all 0.4s;
-//             }
-//         }
+    .member {
+        .img-div {
+            width: 100%;
+            height: 23rem;
+            overflow: hidden;
 
-//         h4 {
-//             padding-top: 0.6rem;
-//             color: #0b4c8c;
-//             margin-bottom: 0.3rem;
-//         }
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                transition: all 0.4s;
+            }
+        }
 
-//         p {
-//             color: #808080;
-//             font-size: 0.9rem;
-//         }
+        h4 {
+            padding-top: 0.6rem;
+            color: #0b4c8c;
+            margin-bottom: 0.3rem;
+        }
 
-//         .img-div:hover img {
-//             transform: scale(1.03);
-//             filter: brightness(60%);
-//             cursor: pointer;
-//         }
-//     }
-// }
+        p {
+            color: #808080;
+            font-size: 0.9rem;
+        }
+
+        .img-div:hover img {
+            transform: scale(1.03);
+            filter: brightness(60%);
+            cursor: pointer;
+        }
+    }
+}
 
 .gallery {
 
